# VergilWang15.github.io

./: 404.html  BingSiteAuth.xml  CNAME  all_site.txt  baidu_verify_code-aN4Hor8Tq3.html  baidu_verify_code-pEnBlTQt1G.html  index.html  index.json  index.xml  robots.txt  sitemap.xml  sitemap_all.xml  sogousiteverification.txt  web.config
PXUA_XU316_KIT/firmware/xe/: Pawpaw_2i0o2xsxxxd.xe  Pawpaw_2i2o2msxxxd.xe  Pawpaw_2i2o2msxxxx.xe  Pawpaw_2i8o8xxxxxx.xe  UC25HQ40_QSPI.spec
about/: index.html  index.xml
about/about_us/: index.html
about/business/: index.html
about/support/: index.html
about/公司介绍/: index.html
about/商务合作/: index.html
about/技术支持/: index.html
css/: main.min.css
docs/: index.html  index.xml
docs/p3510-2mic/: index.html  index.xml
docs/p3510-2mic/p3510-2mic_debug_note/: index.html
docs/p3510-2mic/p3510-2mic_usage/: index.html
docs/pxua08qf48/: index.html  index.xml
docs/pxua08qf48/pxua08qf48_firmware_desc/: index.html
docs/pxua08qf48/pxua08qf48_hw_deseign/: index.html
docs/pxua08qf48/pxua08qf48_proj_import/: index.html
docs/pxua08qf48/pxua08qf48_usage/: index.html
docs/pxua216mb-dl2-m/: index.html  index.xml
docs/pxua216mb-dl2-m/pxua216mb-dl2_app_dome/: index.html
docs/pxua216mb-dl2-m/pxua216mb-dl2_usage/: index.html
docs/pxua_xu316_kit/: index.html  index.xml
docs/pxua_xu316_kit/pxua-xu316-kit_hardware/: index.html
docs/pxua_xu316_kit/pxua-xu316-kit_硬件使用/: index.html
docs/pxua_xu316_kit/pxua-xu316-kit_硬件设计/: index.html
docs/pxua_xu316_kit/pxua-xu316-kit固件说明及修改/: index.html
docs/pxua_xu316_kit/pxua-xu316-kit项目导入/: index.html
docs/pxua_xu316_kit/xu316源码开发说明/: index.html
docs/pxvf3000-kit/: index.html  index.xml
docs/pxvf3000-kit/pxvf3000-kit_dsp_desc/: index.html
docs/pxvf3000-kit/pxvf3000-kit_usage/: index.html
docs/pxvf3000-kit/xvf3000_hw_deseign/: index.html
docs/pxvf3000-kit/xvf3000_project_import/: index.html
docs/pxvf3500-kit/: index.html  index.xml
docs/pxvf3500-kit/pxvf3500-kit_dsp_debug_note/: index.html
docs/pxvf3500-kit/pxvf3500-kit_dsp_desc/: index.html
docs/pxvf3500-kit/pxvf3500-kit_usage/: index.html
docs/pxvf3500-kit/xvf3500_hw_deseign/: index.html
docs/pxvf3500-kit/xvf3500_project_import/: index.html
docs/us516p6-kit/: index.html  index.xml
download/: index.html  index.xml
download/tool_and_app_download/: index.html
en/: 404.html  index.html  index.xml  sitemap.xml
en/en/: index.html  index.xml
en/en/docs/: index.html  index.xml
en/zh-cn/: index.html  index.xml
notes/: index.html  index.xml
notes/why_microphone_array_no_keyword/: index.html
notes/xmos_array_microphone_selection/: index.html
notes/xmos_uac_2_driver_description/: index.html
notes/xmos_xtag_adapter_board/: index.html
p3510/XVF3510-UA Unqualified Release_4.4.0/: CHANGELOG.rst  P3510-2MIC_user_define_dfu_upgrade_cmd.bat  P3510-2MIC_user_define_make_dfu_bin.bat  release_notes.txt  user_define_xvf3510.txt - 快捷方式（在data-partition-input里找到对应文件修改）.lnk  生产flash_bin文件.txt
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/dfu/lib_dfu/host/suffix_generator/: CMakeLists.txt  LICENSE.txt  README.txt
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/dfu/lib_dfu/host/suffix_generator/src/: crc.c  dfu_suffix_generator.c
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/vfctrl/sw_xvf3510/app_xk_xvf3510_l71/host/android/VfctrlApp/app/src/main/cpp/: CMakeLists.txt
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/vfctrl/sw_xvf3510/app_xk_xvf3510_l71/host/android/VfctrlApp/app/src/main/cpp/libusb/: install.sh
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/vfctrl/sw_xvf3510/app_xk_xvf3510_l71/host/android/VfctrlApp/app/src/main/cpp/standalone_app/include/: xmos_user_app.h
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/vfctrl/sw_xvf3510/app_xk_xvf3510_l71/host/dsp_control/: 10-xvf3510.local.rules  CMakeLists.txt  estimate_delay.py  plot_ic.py  vfctrl.py
p3510/XVF3510-UA Unqualified Release_4.4.0/host/src/vfctrl/sw_xvf3510/app_xk_xvf3510_l71/host/dsp_control/src/: host.c  host_control.h  json_only.c  main.c
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/: CHANGELOG.rst  LICENSE.txt  release_notes.txt  user_define_dfu_upgrade_cmd.bat  user_define_xvf3510 - 快捷方式.lnk
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/host/src/dfu/sw_xvf3510/app_xk_xvf3510_l71/host/dfu_control/: CMakeLists.txt  README.txt
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/host/src/dfu/sw_xvf3510/app_xk_xvf3510_l71/host/dfu_control/libusb/Linux64/: libusb-1.0.la
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/host/src/dfu/sw_xvf3510/app_xk_xvf3510_l71/host/dfu_control/src/: argument_parser.c  hal.h  input_reader.c  labels.h  main.c
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/host/src/dpgen/lib_flash_data_partition/host/data_partition_generator/: CMakeLists.txt  LICENSE.txt
p3510/XVF3510-UA-Unqualified-Release_4.1.0rc1/host/src/dpgen/lib_flash_data_partition/host/data_partition_generator/src/: checksum.c  input_reader.c  input_reader.h  parser.c  renderer.c
p3510/firmware/: boot.dfu  data_xvf3510_I2S_aec_ref_16K_v4_1_0.dfu  data_xvf3510_I2S_aec_ref_16K_v4_4_0.dfu  data_xvf3510_I2S_aec_ref_48K_v4_1_0.dfu  data_xvf3510_I2S_aec_ref_48K_v4_4_0.dfu  data_xvf3510_usb_aec_ref_16K_v4_1_0.dfu  data_xvf3510_usb_aec_ref_16K_v4_4_0.dfu  data_xvf3510_usb_aec_ref_48K_v4_4_0.dfu
product_instruction/PPA211/: PPA211  PPA211.html  语音遥控说明书
pxua216mb/uac_driver/: FiiO UAC2 driver-16mic.rar
pxvf3000/firmware/: app_vf_spk_base_cir32_1i1o2.dfu  app_vf_spk_base_cir32_1i1o2_48khz.dfu  app_vf_spk_base_cir32_1i1o2_asr.dfu  app_vf_spk_base_cir32_1i2o2.dfu  app_vf_spk_base_cir32_1i2o2_48khz.dfu  app_vf_spk_base_cir32_1i6o2.dfu  app_vf_spk_base_cir32_1i6o2_asr.dfu
pxvf3500/3dview/: PXVF3500-KIT-LINE33.step
pxvf3500/firwmare/: app_vf_stereo_base_cir32_usb_1i2o2_48k.dfu  app_vf_stereo_base_usb_1i1o2.dfu  app_vf_stereo_base_usb_1i1o2_ASR.dfu  app_vf_stereo_base_usb_1i2o2.dfu  app_vf_stereo_base_usb_1i8o2.dfu  app_vf_stereo_base_usb_1i8o2_analog_ref.dfu
us516p6/doc/: US516P6离线语音控制_用户功能需求采集.txt
zh-cn/: index.html  sitemap.xml
(+156 files in other folders)
